TM-10 Подготовлен клиент для получения информации о пользователе внутри системы. Подготовлена документация API user-management